# vanity-miner-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.cuda  Dockerfile.spirv  GOAL.md  KNOWN_FAILURES.md  README.md  build.rs  flake.nix  notes.txt  rust-toolchain.toml  rustc-ice-2025-06-20T01_56_29-204251.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: builder.yaml  ci.yaml  compile.yaml  cuda-builder.yaml  cuda-compile.yaml  spirv-builder.yaml
cli/: Cargo.toml  build.rs
cli/src/: args.rs  main.rs
cli/src/common/: gpu_context.rs  mod.rs  shared_best_hash.rs  stats.rs  validation.rs  workers.rs
cli/src/modes/: bitcoin.rs  ethereum.rs  gpu_macros.rs  mod.rs  self_test.rs  shallenge.rs  solana.rs
cli/src/runner/: cpu.rs  gpu.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  shared_best_hash.rs  stats.rs  validation.rs
cpu_runner/: Cargo.toml
cpu_runner/src/: bitcoin.rs  cube_root.rs  ethereum.rs  main.rs  shallenge.rs  solana.rs  stats.rs  validation.rs
curve25519-dalek/curve25519-dalek/src/: edwards.rs  field.rs  lib.rs  window.rs
curve25519-dalek/curve25519-dalek/src/backend/serial/fiat_u64/: field.rs
curve25519-dalek/curve25519-dalek/src/backend/serial/u64/: field.rs
docs/: benchmark-2025-07-09.md  cuda.md  spirv.md
ed25519/: Cargo.toml
ed25519/src/: consts.rs  fe.rs  fiat.rs  ge_cached.rs  ge_p1_p1.rs  ge_p2.rs  ge_p3.rs  lib.rs
ed25519_compact/: Cargo.toml
ed25519_compact/src/: common.rs
gpu_runner/: Cargo.toml  build.rs
gpu_runner/src/: add.rs  bitcoin.rs  ethereum.rs  main.rs  shallenge.rs  solana.rs
ir_adapter/: Cargo.toml
ir_adapter/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: base58.rs  base58_v2.rs  ed25519.rs  ed25519_precomputed_table.rs  edwards25519.rs  edwards25519_v2.rs  lib.rs  mock_rng.rs  precomputed_table.rs  sha512.rs  vanity.rs  xoroshiro.rs  xorshiro.rs
kernel/src/ed25519/: fe.rs  fiat.rs  ge.rs  ge_cached.rs  ge_p1_p1.rs  ge_p2.rs  ge_p3.rs  gep1p1.rs  gep2.rs  gep3.rs  mod.rs  precomputed_table.rs  util.rs
kernels/: Cargo.toml  build.rs  rust-toolchain.toml
kernels/.cargo/: config.toml
kernels/src/: add.rs  atomic.rs  bitcoin_vanity.rs  ethereum_vanity.rs  lib.rs  match_handler.rs  memory.rs  panic.rs  self_test.rs  sha.rs  shallenge.rs  solana_vanity.rs  utilities.rs  vanity.rs
logic/: Cargo.toml
logic/src/: base58.rs  bech32.rs  bitcoin_vanity.rs  cube_root.rs  ed25519.rs  ethereum_vanity.rs  keccak256.rs  lib.rs  ripemd160.rs  secp256k1.rs  secp256k1_bak.rs  self_test.rs  sha256.rs  sha512.rs  shallenge.rs  solana_vanity.rs  vanity.rs  xoroshiro.rs
logic/src/secp256k1/: constants.rs  error.rs  field_element.rs  mod.rs  point.rs  public_key.rs  secret_key.rs
nvvm_compiler/: Cargo.toml  Makefile  compile.sh  main.c
nvvm_compiler/src/: main.rs
scripts/: build-cuda.sh  build-gpu.sh  build-spirv.sh  build.sh  vast-build.sh  vast-run.sh  vast.sh
src/: lib.rs  main.rs  stats.rs
transpiler/: Cargo.toml
transpiler/.cargo/: config.toml
transpiler/assets/: libintrinsics.ll
transpiler/scripts/: run.sh
transpiler/src/: main.rs
