[workspace]
resolver = "3"
members = [
  "cli",
  "kernels",
  "logic"
]

[patch.crates-io]
# put compiler_fence behind a feature flag that is disabled by default
zeroize = { git = "https://github.com/brandonros/utils", branch = "nvptx64-support" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
