[workspace]
resolver = "3"
members = [
  "cli",
  "logic",
  "investigations/eth-priv-bisect"
]
exclude = ["kernels", "investigations/eth-priv-bisect/kernels"]

[patch.crates-io]
# put compiler_fence behind a feature flag that is disabled by default
zeroize = { git = "https://github.com/brandonros/utils", branch = "nvptx64-support" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
