[package]
name = "vanity-miner"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = [
    "dep:kernels",
    "dep:cuda-core",
    "dep:cuda-host",
    "kernels/kernel_bitcoin",
    "kernels/kernel_ethereum",
    "kernels/kernel_solana",
    "kernels/kernel_shallenge",
]

[dependencies]
logic = { path = "../logic" }
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
rand = "0.8"
paste = "1.0"

[dependencies.kernels]
path = "../kernels"
optional = true

[dependencies.cuda-core]
git = "https://github.com/brandonros/cuda-oxide.git"
rev = "c345b43f384b81280042c5c2bf232c30787e7140"
optional = true

[dependencies.cuda-host]
git = "https://github.com/brandonros/cuda-oxide.git"
rev = "c345b43f384b81280042c5c2bf232c30787e7140"
optional = true
