[package]
name = "vanity-miner"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = [
    "dep:kernels",
    "dep:cuda-core",
    "dep:cuda-host",
    "kernels/kernel_bitcoin",
    "kernels/kernel_ethereum",
    "kernels/kernel_solana",
    "kernels/kernel_shallenge",
    "kernels/kernel_self_test",
]

[dependencies]
logic = { path = "../logic" }
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
rand = "0.8"
paste = "1.0"

[dependencies.kernels]
path = "../kernels"
optional = true

[dependencies.cuda-core]
git = "https://github.com/brandonros/cuda-oxide.git"
rev = "157cf42133f3e189b66a723f1dfbe21192397c40"
optional = true

[dependencies.cuda-host]
git = "https://github.com/brandonros/cuda-oxide.git"
rev = "157cf42133f3e189b66a723f1dfbe21192397c40"
optional = true
