[package]
name = "vanity-miner"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = [
    "dep:kernels",
    "dep:cuda-core",
    "dep:cuda-host",
    "kernels/kernel_bitcoin",
    "kernels/kernel_ethereum",
    "kernels/kernel_solana",
    "kernels/kernel_shallenge",
    "kernels/kernel_self_test",
]

[dependencies]
logic = { path = "../logic" }
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
rand = "0.8"
paste = "1.0"

[dependencies.kernels]
path = "../kernels"
optional = true

[dependencies.cuda-core]
workspace = true
optional = true

[dependencies.cuda-host]
workspace = true
optional = true
