[package]
name = "gpu_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = "0.8"
common = { path = "../common" }

# christan's branch
#cust = { git = "https://github.com/LegNeato/Rust-CUDA.git", rev = "5f81c65950166abd48cd3b94b01564538a281008" }

# my branch
cust = { git = "https://github.com/brandonros/Rust-CUDA.git", rev = "47ca0a27aa486493857d400d695396cd2966192d" }

# normal
#cust = { git = "https://github.com/Rust-GPU/Rust-CUDA.git", rev = "afb147ed51fbb14b758e10a0a24dbc2311a52b82" }
