[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "precomputed-tables"] }
rand_core = { version = "0.9.3" }
rand_xoshiro = { version = "0.7.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

# christian's branch
#cuda_std = { git = "https://github.com/LegNeato/Rust-CUDA.git", rev = "5f81c65950166abd48cd3b94b01564538a281008" }

# normal
cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA.git" }
