[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "precomputed-tables"] }
rand_core = { version = "0.9.3" }
rand_xoshiro = { version = "0.7.0", default-features = false }
seq-macro = "0.3"

# christian's branch
#cuda_std = { git = "https://github.com/LegNeato/Rust-CUDA.git", rev = "5f81c65950166abd48cd3b94b01564538a281008" }

# my branch
cuda_std = { git = "https://github.com/brandonros/Rust-CUDA.git", rev = "caaef11fa97e1dab4a8baac8e5d4a576561c9a00" }

# normal
#cuda_std = { git = "https://github.com/Rust-GPU/Rust-CUDA.git", rev = "afb147ed51fbb14b758e10a0a24dbc2311a52b82" }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
