[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[features]
default = ["kernel_shallenge"]
kernel_bitcoin = []
kernel_ethereum = []
kernel_solana = []
kernel_shallenge = []

[dependencies]
logic = { path = "../logic" }
cuda-device = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "c345b43f384b81280042c5c2bf232c30787e7140" }
cuda-host = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "c345b43f384b81280042c5c2bf232c30787e7140" }
cuda-core = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "c345b43f384b81280042c5c2bf232c30787e7140" }
