[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[features]
default = ["kernel_shallenge"]
kernel_bitcoin = []
kernel_ethereum = []
kernel_solana = []
kernel_shallenge = []
kernel_self_test = []

[dependencies]
logic = { path = "../logic" }
cuda-device = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "157cf42133f3e189b66a723f1dfbe21192397c40" }
cuda-host = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "157cf42133f3e189b66a723f1dfbe21192397c40" }
cuda-core = { git = "https://github.com/brandonros/cuda-oxide.git", rev = "157cf42133f3e189b66a723f1dfbe21192397c40" }
