[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[features]
default = ["kernel_shallenge"]
kernel_bitcoin = []
kernel_ethereum = []
kernel_solana = []
kernel_shallenge = []
kernel_self_test = []

[dependencies]
logic = { path = "../logic" }
cuda-device = { workspace = true }
cuda-host = { workspace = true }
cuda-core = { workspace = true }
