[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "precomputed-tables"] }
secp256k1 = { version = "0.31.0", default-features = false, features = ["alloc"] }
rand_core = { version = "0.9.3" }
rand_xoshiro = { version = "0.7.0", default-features = false }
seq-macro = "0.3"

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }