[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "precomputed-tables"] }
k256 = { version = "0.13.4", default-features = false, features = ["alloc", "arithmetic", "precomputed-tables", "critical-section"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
rand_core = { version = "0.9.3" }
rand_xoshiro = { version = "0.7.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
seq-macro = "0.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
